--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,15 +8,20 @@ html {
     font-size: 62.5%; /*Default font size is 16 px. We set font size to 62.5% because we want our default size to be 10px for the rem measurements we specified below. REM is a unit based on default font size which makes responsive design much easier, as we only need to change the font size to scale everything larger or smaller. */
     height: 100%;
     width: 100%;
+    // position: absolute;
 }
 
 body {
     height: 100%;
     width: 100%;
     position: absolute;
-    
+    // overflow-x: hidden;
 }
-
+.siteWrapper {
+    position: absolute;
+    width: 100%;
+    overflow-x: hidden;
+}
 .nav {
     color: white;
     display: flex;
@@ -120,8 +125,9 @@ a {
 
 .test {
     z-index: -2;
-    width: 100%;
-
+    // width: 100%;
+    // height: 100%;
+    // position: relative;
     .header {
         background-image: url(https://mui.today/__export/1582943787348/sites/mui/img/2020/02/28/jackie-chan.jpg_617962631.jpg);
         background-size: cover;
@@ -129,7 +135,7 @@ a {
         width: 100%;
         top: -7rem;
         position: fixed;
-        padding: 3rem;
+        // padding: 3rem;
         z-index: -2;
     
         .message {
@@ -154,7 +160,8 @@ a {
         justify-content: center;
         background: white;
         padding: 0 10rem;
-
+        width: 100%;
+        
         .inner {
             font-size: 4rem;
             padding: 3rem 0;
